优化了代码

--- a/src/main/resources/Crawler.properties
+++ b/src/main/resources/Crawler.properties
@@ -10,19 +10,20 @@ geode_ak=2cf3b11291c2125afe5bd847c36dc702
 //香港污染物
 pollutantURL=http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration.html
 //世界首都天气
-capitalURL=http://www.weather.com.cn/weather1dn/113010100.shtml,\
-  http://www.weather.com.cn/weather1dn/112010100.shtml,\
-  http://www.weather.com.cn/weather1dn/138010100.shtml,\
-  http://www.weather.com.cn/weather1dn/115010100.shtml,\
-  http://www.weather.com.cn/weather1dn/157030100.shtml,\
-  http://www.weather.com.cn/weather1dn/132010100.shtml,\
-  http://www.weather.com.cn/weather1dn/106010100.shtml,\
-  http://www.weather.com.cn/weather1dn/102010100.shtml,\
-  http://www.weather.com.cn/weather1dn/103010100.shtml,\
-  http://www.weather.com.cn/weather1dn/136010101.shtml,\
-  http://www.weather.com.cn/weather1dn/111010101.shtml,\
-  http://www.weather.com.cn/weather1dn/233370100.shtml,\
-  http://www.weather.com.cn/weather1dn/201010100.shtml,\
-  http://www.weather.com.cn/weather1dn/202010100.shtml,\
-  http://www.weather.com.cn/weather1dn/206010100.shtml
+capitalURL=http://www.weather.com.cn/weathern/113010100.shtml,\
+  http://www.weather.com.cn/weathern/112010100.shtml,\
+  http://www.weather.com.cn/weathern/138010100.shtml,\
+  http://www.weather.com.cn/weathern/115010100.shtml,\
+  http://www.weather.com.cn/weathern/157030100.shtml,\
+  http://www.weather.com.cn/weathern/132010100.shtml,\
+  http://www.weather.com.cn/weathern/106010100.shtml,\
+  http://www.weather.com.cn/weathern/102010100.shtml,\
+  http://www.weather.com.cn/weathern/103010100.shtml,\
+  http://www.weather.com.cn/weathern/136010101.shtml,\
+  http://www.weather.com.cn/weathern/111010101.shtml,\
+  http://www.weather.com.cn/weathern/233370100.shtml,\
+  http://www.weather.com.cn/weathern/201010100.shtml,\
+  http://www.weather.com.cn/weathern/202010100.shtml,\
+  http://www.weather.com.cn/weathern/206010100.shtml
+
 
