--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,12 @@
       <groupId>us.codecraft</groupId>
       <version>0.5.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.1.4.jre7</version>
+    </dependency>
+
   </dependencies>
 </project>
