优化了代码

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -72,4 +72,4 @@ log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%t] %c{2}: %m%
 
 # Custom Logging levels
 
-log4j.com.wellcommsoft.noce=INFO
+log4j.com.crawler.noce=INFO
