修改了数据库连接方式

--- a/src/main/resources/Crawler.properties
+++ b/src/main/resources/Crawler.properties
@@ -5,6 +5,11 @@ tencent_ak=TRMBZ-C65KW-2H6R7-RUDOQ-B5GLO-FCFWX
 //高德地图密钥
 geode_ak=2cf3b11291c2125afe5bd847c36dc702
 
+//数据库连接属性
+Driver=org.postgresql.Driver
+URL=jdbc:postgresql://localhost:5432/grab_dev
+USER=postgres
+PASSW=154283
 
 //URL
 //香港污染物
