修改了线程安全问题，添加了北京的天气

--- a/src/main/resources/Crawler.properties
+++ b/src/main/resources/Crawler.properties
@@ -9,13 +9,14 @@ geode_ak=2cf3b11291c2125afe5bd847c36dc702
 Driver=org.postgresql.Driver
 URL=jdbc:postgresql://localhost:5432/grab_dev
 USER=postgres
-PASSW=154283
+PASSWD=154283
 
 //URL
 //香港污染物
 pollutantURL=http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration.html
 //世界首都天气
-capitalURL=http://www.weather.com.cn/weathern/155260100.shtml,\
+capitalURL=http://www.weather.com.cn/weather/101010100.shtml,\
+http://www.weather.com.cn/weathern/155260100.shtml,\
 http://www.weather.com.cn/weathern/223010100.shtml,\
 http://www.weather.com.cn/weathern/224010100.shtml,\
 http://www.weather.com.cn/weathern/121010100.shtml,\
