过去24小时污染物浓度

--- a/src/main/resources/Crawler.properties
+++ b/src/main/resources/Crawler.properties
@@ -7,13 +7,29 @@ geode_ak=2cf3b11291c2125afe5bd847c36dc702
 
 //数据库连接属性
 Driver=org.postgresql.Driver
-URL=jdbc:postgresql://localhost:5432/grab_dev
+URL=jdbc:postgresql://localhost:5432/grab_production
 USER=postgres
-PASSWD=154283
+PASSWD=
 
 //URL
 //香港污染物
-pollutantURL=http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration.html
+pollutantURL=http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration45fd.html?stationid=80,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentratione1a6.html?stationid=73,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentrationfb71.html?stationid=74,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentrationdb46.html?stationid=66,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration30e8.html?stationid=72,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration228e.html?stationid=77,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration0b35.html?stationid=83,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration1f2c.html?stationid=70,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration537c.html?stationid=82,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentrationf322.html?stationid=78,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration6e9c.html?stationid=69,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration2c5f.html?stationid=75,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration233a.html?stationid=76,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration5ca5.html?stationid=71,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentrationf9dd.html?stationid=79,\
+http://www.aqhi.gov.hk/sc/aqhi/past-24-hours-pollutant-concentration9c57.html?stationid=81
+
 //世界首都天气
 capitalURL=http://www.weather.com.cn/weather/101010100.shtml,\
 http://www.weather.com.cn/weathern/155260100.shtml,\
